added Name input

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -9,6 +9,10 @@
   background: none;
 }
 
+// .theme_button:focus {
+//   background: blue;
+// }
+
 .theme_button:hover,
 .theme_button {
   border: none;
