--- a/src/components/Select/styles.module.scss
+++ b/src/components/Select/styles.module.scss
@@ -18,11 +18,28 @@
   user-select: none;
 }
 
+.select_container {
+  display: none;
+  transition: all 0.3s ease-in-out;
+  background-color: var(--background-color);
+  border: 1px solid var(--font-color);
+  border-top: 1px solid var(--second-font-color);
+  padding: 0 10px;
+  position: absolute;
+  z-index: 10;
+  width: 265px;
+  height: 300px;
+  top: 43px;
+  left: -1px;
+  border-radius: 0 0 8px 8px;
+  box-sizing: border-box;
+}
+
 .select_option_container {
+  transition: all 0.3s ease-in-out;
   display: none;
   position: absolute;
   right: 4px;
-  transition: all 0.3s ease-in-out;
   border: 1px solid var(--font-color);
   border-radius: 0 0 8px 0px;
   border-top: none;
@@ -95,19 +112,6 @@
 
   .select_container {
     display: flex;
-    transition: all 0.3s ease-in-out;
-    background-color: var(--background-color);
-    border: 1px solid var(--font-color);
-    border-top: 1px solid var(--second-font-color);
-    padding: 0 10px;
-    position: absolute;
-    z-index: 10;
-    width: 265px;
-    height: 300px;
-    top: 43px;
-    left: -1px;
-    border-radius: 0 0 8px 8px;
-    box-sizing: border-box;
   }
 }
 
