--- a/src/components/Filters/styles.module.scss
+++ b/src/components/Filters/styles.module.scss
@@ -3,4 +3,22 @@
   justify-content: center;
   gap: 20px;
   margin-bottom: 45px;
+
+  div {
+    z-index: 10;
+  }
+
+  div:nth-child(2) {
+    z-index: 30;
+  }
+
+  div:nth-child(3) {
+    z-index: 20;
+  }
+}
+
+@media (max-width: 580px) {
+  .filters_container {
+    flex-wrap: wrap;
+  }
 }
