--- a/src/components/InputRange/styles.module.scss
+++ b/src/components/InputRange/styles.module.scss
@@ -16,6 +16,7 @@
   box-sizing: border-box;
   cursor: pointer;
   user-select: none;
+  // z-index: 10;
 }
 
 .select_container {
@@ -27,13 +28,13 @@
   background-color: var(--background-color);
   border: 1px solid var(--font-color);
   border-top: 1px solid var(--second-font-color);
-  padding: 0 10px;
+  padding: 20px 10px;
   position: absolute;
-  z-index: 10;
+  // z-index: 10;
   width: calc(100% + 2.1px);
-  height: 85px;
+  min-height: 85px;
   top: 43px;
-  left: -1px;
+  left: -0.7px;
   border-radius: 0 0 8px 8px;
 }
 
@@ -54,6 +55,7 @@
   }
 
   .select_title {
+    width: calc(265px * 0.77 * calc(100vw / 1366px));
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -84,10 +86,58 @@
       display: flex;
       margin: 0;
       padding: 15px;
-      width: 95px;
+      width: 95px * (100vw / 1366px);
+      max-width: 95px;
       height: 45px;
       box-sizing: border-box;
       border-radius: 8px;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .select {
+    .select_title {
+      width: calc(265px * 0.6 * calc(100vw / 1366px));
+    }
+  }
+
+  .select_active {
+    .select_container {
+      gap: 3px;
+      flex-direction: column;
+
+      input {
+        width: calc(110px * 100vw / 1024px);
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .select {
+    .select_title {
+      width: calc(215px * 0.7 * calc(100vw / 1366px));
+    }
+  }
+}
+
+@media (max-width: 580px) {
+  .select_active {
+    .select_container {
+      flex-direction: row;
+      gap: 10px;
+
+      input {
+        width: 150px;
+      }
+    }
+  }
+
+  .select {
+    width: 100%;
+    .select_title {
+      width: 100%;
     }
   }
 }
