--- a/src/components/Select/styles.module.scss
+++ b/src/components/Select/styles.module.scss
@@ -2,6 +2,7 @@
   transition:
     background-color 0.3s ease-in-out,
     border 0.3s ease-in-out;
+  // z-index: 11;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -20,17 +21,17 @@
 
 .select_container {
   display: none;
+  position: absolute;
   transition: all 0.3s ease-in-out;
   background-color: var(--background-color);
   border: 1px solid var(--font-color);
   border-top: 1px solid var(--second-font-color);
   padding: 0 10px;
-  position: absolute;
-  z-index: 10;
-  width: 265px;
+  // z-index: 10;
+  width: calc(100% + 1.6px);
   height: 300px;
   top: 43px;
-  left: -1px;
+  left: -0.7px;
   border-radius: 0 0 8px 8px;
   box-sizing: border-box;
 }
@@ -39,7 +40,6 @@
   transition: all 0.3s ease-in-out;
   display: none;
   position: absolute;
-  right: 4px;
   border: 1px solid var(--font-color);
   border-radius: 0 0 8px 0px;
   border-top: none;
@@ -51,10 +51,11 @@
   padding: 0;
   padding-top: 20px;
   margin: 0;
-  width: 260px;
+  width: calc(100% - 5px);
+  right: 5.7px;
   height: 280px;
   box-sizing: border-box;
-  z-index: 100;
+  // z-index: 100;
 
   li {
     transition: all 0.3s ease-in-out;
@@ -63,10 +64,16 @@
     justify-content: start;
     list-style: none;
     align-items: center;
-    padding: 0 30px;
+    padding: 0;
+    padding-left: calc(30px * (100vw / 1366px));
+    // padding-left: 30px;
+
     min-height: 40px;
     width: 100%;
     box-sizing: border-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   li:hover {
@@ -92,6 +99,7 @@
   }
 
   .select_title {
+    width: calc(265px * 0.77 * calc(100vw / 1366px));
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -136,4 +144,35 @@
   background: var(--second-font-color);
   border-radius: 50px;
   position: relative;
+}
+
+@media (max-width: 1024px) {
+  .select {
+    .select_title {
+      width: calc(265px * 0.6 * calc(100vw / 1366px));
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .select {
+    .select_title {
+      width: calc(215px * 0.7 * calc(100vw / 1366px));
+    }
+  }
+}
+
+@media (max-width: 580px) {
+  .select {
+    width: 100%;
+    .select_title {
+      width: 100%;
+    }
+  }
+
+  .select_option_container {
+    li {
+      padding-left: 30px;
+    }
+  }
 }
