--- a/src/ui/CrossIcon/styles.module.scss
+++ b/src/ui/CrossIcon/styles.module.scss
@@ -4,7 +4,7 @@
   transition: all 0.3s ease-in-out;
 }
 
-// .icon:hover {
-//   fill: var(--font-color);
-//   transform: rotate(180deg);
-// }
+.icon:hover {
+  fill: var(--font-color);
+  transform: rotate(180deg);
+}
